Purple Spacing fixed in Governance for wider screens

--- a/src/Pages/Governance/governance.module.scss
+++ b/src/Pages/Governance/governance.module.scss
@@ -7,6 +7,10 @@
     background: var(--theme-governance-mobileBg);
   }
 
+  @media screen and (min-width: 1400px) {
+    height: 1800px;
+  }
+
   .firstRow {
     padding-top: 100px;
 
@@ -60,8 +64,8 @@
     }
 
     @media screen and (min-width: 1200px) {
-      padding-top: 80px;
-      margin-top: 100px;
+      padding-top: 20px;
+      margin-top: 60px;
     }
 
     .plentyHeading {
